--- a/CAS.Desktop/CAS.Desktop.csproj
+++ b/CAS.Desktop/CAS.Desktop.csproj
@@ -39,8 +39,12 @@
     <ProjectCapability Include="Msix" />
   </ItemGroup>
   <ItemGroup>
+    <PackageReference Include="Microsoft.Web.WebView2" Version="1.0.3296.44" />
     <PackageReference Include="Microsoft.Windows.SDK.BuildTools" Version="10.0.26100.4188" />
     <PackageReference Include="Microsoft.WindowsAppSDK" Version="1.7.250606001" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\CAS.Core\CAS.Core.csproj" />
   </ItemGroup>
   <ItemGroup>
     <Page Update="Views\MainPage.xaml">
